mod_proxy_html: support automatic doctype detection. PR 56285 Patch by Micha Lenk, adapted by niq

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1599027 13f79535-47bb-0310-9956-ffa450edef68